style.scss
---
---

//
// IMPORTS
//

@import "reset";
@import "open-color";
@import "variables";

// Syntax highlighting @import is at the bottom of this file

/**************/
/* BASE RULES */
/**************/

html {
  font-size: $base-font-size;
}

body {
  font-family: $base-font;
  color: $base-color;
  line-height: 1.7em;
}

.container {
  margin: 0 auto;
  max-width: 1000px;
  padding: 2em 20px;
  width: 100%;
}

h1, h2, h3, h4, h5, h6 {
  line-height: 2em;
  padding: 0;

  @include mobile {
    line-height: 1.6em;
  }
}

h1, h2, h3, h5 {
  font-weight: bold;
}

h1 {
  font-size: 30px;
  a {
    color: inherit;
  }
}

h2 {
  font-size: 24px;
}

h3 {
  font-size: 20px;
}

h4 {
  font-size: 20px;
  color: $base-lighten-color;
}

h6 {
  color: $base-lighten-color;
}

p {
  color: $text-color;
  margin: 1em 0;
}

a {
  color: $link-color;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  -ms-transition: all 0.5s;
  -o-transition: all 0.5s;
  transition: all 0.5s;

  &:hover, &:active {
    color: $link-lighten-color;
  }
}
.ws-button.code-show ion-icon {
  vertical-align: sub;
}

a.dl-button {
  float: right;
}

a.dl-button ion-icon {
  vertical-align: unset;
    font-size: 27px;
}

ion-icon {
    vertical-align: text-bottom;
    font-size: 17px;
    display: inline-block;
}

.intro > .ws-buttons {
  justify-content: flex-end;
} 

.ws-buttons {
  display: flex;
  padding-top: 1em;
  font-size: $small-font-size;
}

a.ws-button {
  color: $base-lighten-color;
  border: 1px solid $divider-color;
  border-radius: 20.5px;
  padding: 6px 18px;
  background: $background-color;
  margin-right: 1em;
  display: inline-block;

  &:hover, &:focus {
    color: $link-lighten-color;
    border: 1px solid $link-lighten-color;
    background-color: $link-bghv-color;
  }
}

article.post {
  padding: .5em 0;
}

article.post:first-child {
  margin: 0;
}

article.post .entry {
  padding: 1em 1.2em 0 1.2em;
}

article.post .meta {
  border-bottom: 1px solid #f1f3f5;
  padding: 0 1.2em;
}

article.post.pinned {
  background-color: #f5fffc;
}

.details {
  padding: 1rem 1.5rem;
}

.title-level {
  font-size: 1.25rem;
  margin-bottom: .5rem;
  font-weight: 700;
}

span.author-level {
  font-weight: 500;
  color: grey;
}

.desc {
  font-size: 1rem;
  color: #343a40;
}

div.intro {
  padding: 0.5em 1.6em 1.6em 1.6em;
  margin: 2em 0;
  border-radius: 10px;
  background: linear-gradient(23deg, #f8f9fa 10%, #7fc2855e 80%);
  border: 1px solid #f1f3f5;
  overflow: auto;
}

.intro .ws-buttons a.ws-button {
  margin-right: 0;
  margin-left: 1em;
}

.levels {
  display: flex;
  justify-content: space-evenly;
  place-items: flex-start;
  flex-wrap: wrap;
  border-top: 1px solid #f1f3f5;
}

.levels>div {
  width: 40%;
}

.card {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,.1), 0 4px 6px -2px rgba(0,0,0,.05);
  overflow: hidden;
  border-radius: 20px;
  margin: 30px 0 15px 0;
}

.card:before, .card:after {
   border-width: 0;
   border-style: solid;
   border-color: #e2e8f0;
}

div.card img {
  width: 100%;
}

.level-tag {
  font-size: .875rem;
  padding: .25rem .75rem;
  margin-right: .5em;
  font-weight: 600;
  display: inline-block;
  color: #343a40;
  background-color: #edf2f7;
  transition: .5s;
  margin-top: .5em;
}

a.tag-link:hover {
  .level-tag {
    background-color: #d0e8d2;
  }
} 

.latest {
  background-color: #d0e8d2!important;
}

.rounded-full {
   border-radius: 9999px;
}

.jk-logo {
  display: inline-block;
  position: relative;
  margin:0 auto;
}

a.ws-link-bg {
  color: $background-color;
  background-color: $link-lighten-color;
  border: 1px solid $link-lighten-color;
}
a.ws-link-bg:hover {
  background-color: $link-color;
  border: 1px solid $link-color;
}

.ws-build-logo {
  display: inline-block;
  top: 7.5%;
  right: 12%;
  position: absolute;

  a {
    display: inline-flex;
    padding: .5em;
    transition: .5s;
  }

  ion-icon {
    font-size: 165%;
    pointer-events: none;

    @include mobile {
      font-size: 1em;
    }
  }
}

.badge-pill{
  padding-right:.6em;
  padding-left:.6em;
  border-radius:10rem;
  background-color: #868e9647;
  color: $link-color;
  font-size: small;
  font-weight: 600;
  font-family: system-ui;
  cursor: pointer;
  -webkit-transition: all 0.5s;
  -moz-transition: all 0.5s;
  -ms-transition: all 0.5s;
  -o-transition: all 0.5s;
  transition: all 0.5s;

  &:hover, &:active {
    color: $link-lighten-color;
  }
}

a svg {
    transition: all 0.5s;
}

em, i {
  font-style: italic;
}

strong, b {
  font-weight: bold;
}

sub {
  vertical-align: sub;
  font-size: smaller;
}

sup {
  vertical-align: super;
  font-size: smaller;
}

hr {
  border: 0;
  border-top: 1px solid $divider-color;
  margin: 1.5em auto;
}

// Yeun's list style
// https://gist.github.com/yeun/d824fc7b04b756508f4b0143535cec30

ol, ul {
  > li {
    &:before {
      position: absolute;
      width: $li-bullets-width;
      margin-left: -$li-bullets-width;
      display: inline-block;
      box-sizing: border-box;
      text-align: right;
    }
  }
}

ul {
  > li:before {
    content: "\2022";
    padding-right: $ul-bullets-right-space;
    font-family: $ul-bullets-font;
    font-size: $ul-bullets-font-size;
    line-height: $ul-bullets-font-line-height;
  }
}

ol {
  counter-reset: section;

  > li:before {
    counter-increment: section;
    content: counter(section) ".";
    padding-right: $ol-bullets-right-space;
    font-family: $ol-bullets-font;
    font-size: $ol-bullets-font-size;
    line-height: $ol-bullets-font-line-height;
  }
}

ol, ul {
  > li {
    margin: 0 auto $li-bottom-space $li-bullets-width;
    line-height: $li-line-height;

    > ol,
    > ul {
      margin-top: $li-bottom-space;
    }
  }
}

li {
  > ol,
  > ul {
    > li {
      font-size: ($li-child-size-ratio * 1em);
      margin: 0 auto ($li-bottom-space * $li-child-size-ratio) ($li-bullets-width * $li-child-size-ratio);
    }
  }
}
/* ... */

